2013-04-30 Glen Mazza (glenmazza AT apache DOT org)

       * 2.9.1-incubating-7

       * Moved WAR resources from previous commit to correct src/main/webapps/WEB-INF location, fixed pom.xml
         to stop duplicating those resources in both webapps and webapps/WEB-INF
         

2013-04-30 Glen Mazza (glenmazza AT apache DOT org)

       * 2.9.1-incubating-6

       * Moved WAR resources that don't require modification from etc/ to Mavenized src/main/webapps location.
         
       * removed unused etc/dtd folder

2013-04-29 Glen Mazza (glenmazza AT apache DOT org)

       * 2.9.1-incubating-5

       * Moved i18n resource files to Mavenized location.
         
       * Updated build.xml and pom.xml for new i18n source locations

2013-04-25 Glen Mazza (glenmazza AT apache DOT org)

       * 2.9.1-incubating-4

       * Moved ini folders from etc/ and tests/etc to 
         Mavenized locations src/[main|test]/resources/ini
         
       * Updated build.xml and pom.xml for new ini source locations

2013-04-24 Glen Mazza (glenmazza AT apache DOT org)

       * 2.9.1-incubating-3

       * Moved JSPWiki source and test source to Mavenized locations
         
       * Updated build.xml and pom.xml for new JSPWiki source locations

2013-04-23  Dirk Frederickx (brushed AT apache DOT org)

       * 2.9.1-incubating-2

       * JSPWIKI-775, fixing "null" change-notes in PageInfo.jsp.

2013-04-21  Harry Metske <metskem@apache.org>

       * 2.9.1-incubating-1

       * fixed JSPWIKI-396): UTF-8 characters in wiki pages incorrectly rendered if served by Tomcat

2013-04-14 Glen Mazza (glenmazza AT apache DOT org)

       * Start of Selenium plugin (just testing prior to it moving into its own module)
         
       * Tomcat 5.x JSP precompilation option removed from build.xml

       * Selenium TestSuite.html tests renamed to CamelCase to allow export-to-Java to work.

2013-04-07  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-incubating-0
       