@@ -1,3 +1,7 @@
+2013-05-02 Glen Mazza (glenmazza AT apache DOT org)
+
+       * Removed install.sh, slight renaming of web.xml files generated in build.xml for readability
+         
 2013-04-30 Glen Mazza (glenmazza AT apache DOT org)
 
        * 2.9.1-incubating-7
